slurm/k8s_mega/practice/2.auth/dex-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dex
  namespace: kube-system
spec:
  selector:
    app: dex
  ports:
  - name: dex
    port: 5556
    protocol: TCP
    targetPort: 5556
