slurm/k8s_mega/practice/2.auth/dex-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: dex
  namespace: kube-system
spec:
  rules:
  - host: auth.s<Ваш номер логина>.edu.slurm.io
    http:
      paths:
      - backend:
          serviceName: dex
          servicePort: 5556
  tls:
  - hosts:
    - auth.s<Ваш номер логина>.edu.slurm.io
    secretName: dex-tls
